fixed radia button alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,7 @@ hr {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 280px;
     padding: 10px 0;
 }
 
